--- a/src/main/webapp/css/theraStyle.css
+++ b/src/main/webapp/css/theraStyle.css
@@ -1,30 +1,34 @@
 header {
-    background-color: 	#00FAAA;
-    /* background-image: "#"; */
-    width: 96%;
-    padding: 25px;
-    text-align: center;
+	background-color: 	#fff;
+	/* background-image: "#"; */
+	width: 96%;
+	padding: 25px;
+	text-align: center;	
+    border-radius: 5px;
+    box-shadow: 0 0, 0 3px 20px rgba(0, 0, 0, .35);
 }
 
 header a {
-    display: inline;
-    padding: 5%;
-
+	display: inline;
+	padding: 5%;
+    color: #222;
 }
 
 /* Section */
 .section {
-    clear: both;
-    margin: 0px;
-    padding: 0px;
+  clear: both;
+  margin: 0px;
+  padding: 0px;
 }
+
 /* Column */
 .col {
-    background: #eee;
-    display: block;
-    float:left;
-    margin: 1% 0 1% 1.6%;
+  background: red;
+  display: block;
+  float:left;
+  margin: 1% 0 1% 1.6%;
 }
+
 .col:first-child { margin-left: 0 !important; }
 
 /* Row */
@@ -41,26 +45,27 @@ header a {
 
 /* Full Width below 768 pixels */
 @media only screen and (max-width: 768px) {
-    .col {  margin: 1% 0 1% 0%; }
-    [class*='grid_'] { width: 100%; }
+  .col {  margin: 1% 0 1% 0%; }
+  [class*='grid_'] { width: 100%; }
 }
 
 H1 {
-    text-align: center;
-
+	text-align: center;
+    color: #fff;
+    text-shadow: 0 -1px 5px rgba(0, 0, 0, .9), 0 0 5px rgba(0, 0, 0, .8);
 }
 
 .button {
-    display: inline-block;
+	display: inline-block;
     height: 124px;
     width: 100%;
     text-align: center;
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
     border-radius: 8px;
-    -webkit-box-shadow:    0 8px 0 #b5376d, 0 15px 20px rgba(0, 0, 0, .35);
-    -moz-box-shadow: 0 8px 0 #b5376d, 0 15px 20px rgba(0, 0, 0, .35);
-    box-shadow: 0 8px 0 #b5376d, 0 15px 20px rgba(0, 0, 0, .35);
+    -webkit-box-shadow:    0 8px 0 #B19730, 0 15px 20px rgba(0, 0, 0, .35);
+    -moz-box-shadow: 0 8px 0 #B19730, 0 15px 20px rgba(0, 0, 0, .35);
+    box-shadow: 0 8px 0 #B19730, 0 15px 20px rgba(0, 0, 0, .35);
     -webkit-transition: -webkit-box-shadow .1s ease-in-out;
     -moz-transition: -moz-box-shadow .1s ease-in-out;
     -o-transition: -o-box-shadow .1s ease-in-out;
@@ -73,11 +78,11 @@ H1 {
     height: 68%;
     width: 80.2%;
     padding: 20px 30px;
-    background-color: #ec528d;
-    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(hsla(338, 90%, 80%, .8)), to(hsla(338, 90%, 70%, .2)));
-    background-image: -webkit-linear-gradient(hsla(338, 90%, 80%, .8), hsla(338, 90%, 70%, .2));
-    background-image: -moz-linear-gradient(hsla(338, 90%, 80%, .8), hsla(338, 90%, 70%, .2));
-    background-image: -o-linear-gradient(hsla(338, 90%, 80%, .8), hsla(338, 90%, 70%, .2));
+    background-color: #B19730;
+    background-image: -webkit-gradient(linear, 2% 4%, 78% 0%, from(hsla(50, 65%, 99%, .8)), to(hsla(46, 72%, 69%, .2)));
+    background-image: -webkit-linear-gradient(rgba(253, 231, 86, .8), hsla(46, 72%, 69%, .2));
+    background-image: -moz-linear-gradient(rgba(253, 231, 86, .8), hsla(46, 72%, 69%, .2));
+    background-image: -o-linear-gradient(rgba(253, 231, 86, .8), hsla(46, 72%, 69%, .2));
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
     border-radius: 8px;
@@ -86,7 +91,7 @@ H1 {
     box-shadow: inset 0 -1px 1px rgba(255, 255, 255, .15);
     font-family: 'Pacifico', Arial, sans-serif;
     line-height: 1;
-    text-shadow: 0 -1px 1px rgba(175, 49, 95, .7);
+    text-shadow: 0 -1px 1px rgba(177, 151, 48, .7);
     -webkit-transition: background-color .2s ease-in-out, -webkit-transform .1s ease-in-out;
     -moz-transition: background-color .2s ease-in-out, -moz-transform .1s ease-in-out;
     -o-transition: background-color .2s ease-in-out, -o-transform .1s ease-in-out;
@@ -94,14 +99,14 @@ H1 {
 }
 
 .button:hover span {
-    background-color: #ec6a9c;
-    text-shadow: 0 -1px 1px rgba(175, 49, 95, .9), 0 0 5px rgba(255, 255, 255, .8);
+    background-color: lightseagreen;
+    text-shadow: 0 -1px 1px rgba(255, 232, 95, .9), 0 0 5px rgba(255, 255, 255, .8);
 }
 
 .button:active, .button:focus {
-    -webkit-box-shadow:    0 8px 0 #c5376d, 0 12px 10px rgba(0, 0, 0, .3);
-    -moz-box-shadow: 0 8px 0 #c5376d, 0 12px 10px rgba(0, 0, 0, .3);
-    box-shadow:    0 8px 0 #c5376d, 0 12px 10px rgba(0, 0, 0, .3);
+    -webkit-box-shadow:    0 8px 0 #B19730, 0 12px 10px rgba(0, 0, 0, .3);
+    -moz-box-shadow: 0 8px 0 #B19730, 0 12px 10px rgba(0, 0, 0, .3);
+    box-shadow:    0 8px 0 #B19730, 0 12px 10px rgba(0, 0, 0, .3);
 }
 
 .button:active span {
@@ -112,29 +117,56 @@ H1 {
 }
 
 .calendar{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 2%;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 2%;
+}
+
+nav {
+    float: left;
+    max-width: 160px;
+    margin: 0;
+    padding: 1em;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+nav ul a {
+    text-decoration: none;
 }
 
 .login form{
     margin-left: auto;
     margin-right: auto;
-    width: 8em;
+    width: 9em;
     padding: 1%;
-
+    background-color:rgba(255, 255, 255, 0.6);
+    border-radius: 5px;
+    box-shadow: 0 0, 0 3px 20px rgba(0, 0, 0, .35);
+    
 }
 
-body.p1{
-    background: white;
+body{
+    background: #6dc497; /* Old browsers */
+background: -moz-linear-gradient(45deg, #6dc497 0%, #55c8e7 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(45deg, #6dc497 0%,#55c8e7 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(45deg, #6dc497 0%,#55c8e7 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6dc497', endColorstr='#55c8e7',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
 
 footer{
-    background-color: 	#00FAAA;
-    /* background-image: "#"; */
-    width: 96%;
-    padding: 25px;
+    background-color: 	#fff;
+	/* background-image: "#"; */
+	width: 96%;
+	padding: 25px;
     padding-top: 5%;
     margin-top: 5%;
+    border-radius: 5px;
+    border-radius: 5px;
+    box-shadow: 0 0, 0 3px 20px rgba(0, 0, 0, .35);
 }
+
