--- a/src/main/webapp/css/theraStyle.css
+++ b/src/main/webapp/css/theraStyle.css
@@ -1,45 +1,52 @@
 header {
-	background-color: #fff;
-	/* background-image: "#"; */
-	width: 96%;
-	padding: 25px;
-	text-align: left;	
+    background-color: #fff;
+    /* background-image: "#"; */
+    width: 96%;
+    padding: 25px;
+    text-align: left;
     border-radius: 5px;
     box-shadow: 0 0, 0 3px 20px rgba(0, 0, 0, .35);
 }
 
 header a {
-	display: inline;
-	padding: 5%;
+    display: inline;
+    padding: 5%;
     color: #222;
 }
 
 header h1 {
-	text-align: left;
+    text-align: left;
     color: #fff;
     padding-left: 5%;
     text-shadow: 0 -1px 5px rgba(0, 0, 0, .9), 0 0 5px rgba(0, 0, 0, .8);
+    display: inline-block;
 }
 
-header form{
+header #signout{
+    float: right;
+    margin-top: 15px;
+
+}
+
+header #breezoResponse{
     text-align: right;
-    display: inline;
+    display: inline-block;
     float: right;
 }
 
 
 /* Section */
 .section {
-  clear: both;
-  margin: 0px;
-  padding: 0px;
+    clear: both;
+    margin: 0px;
+    padding: 0px;
 }
 
 /* Column */
 .col {
-  display: block;
-  float:left;
-  margin: 1% 0 1% 1.6%;
+    display: block;
+    float:left;
+    margin: 1% 0 1% 1.6%;
 }
 
 .col:first-child { margin-left: 0 !important; }
@@ -58,13 +65,14 @@ header form{
 
 /* Full Width below 768 pixels */
 @media only screen and (max-width: 768px) {
-  .col {  margin: 1% 0 1% 0%; }
-  [class*='grid_'] { width: 100%; }
+    .col {  margin: 1% 0 1% 0%; }
+    [class*='grid_'] { width: 100%; }
 }
 
 
 .button {
-	display: inline-block;
+    display: inline-block;
+    margin-top: 10%;
     height: 124px;
     width: 100%;
     text-align: center;
@@ -91,7 +99,7 @@ header form{
     height: 68%;
     width: inherit;
     max-width: 80%;
-    
+
     padding: 20px 30px;
     background-color: #B19730;
     background-image: -webkit-gradient(linear, 2% 4%, 78% 0%, from(hsla(50, 65%, 99%, .8)), to(hsla(46, 72%, 69%, .2)));
@@ -132,18 +140,19 @@ header form{
 }
 
 .calendar{
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	padding: 2%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 2%;
 }
-
+/*
 nav {
     float: left;
     max-width: 160px;
     margin: 0;
     padding: 1em;
 }
+*/
 
 nav ul {
     list-style-type: none;
@@ -154,35 +163,29 @@ nav ul a {
     text-decoration: none;
 }
 
-.login form{
-    margin-left: auto;
-    margin-right: auto;
-    width: 9em;
-    padding: 1%;
-    background-color:rgba(255, 255, 255, 0.6);
-    border-radius: 5px;
-    box-shadow: 0 0, 0 3px 20px rgba(0, 0, 0, .35);
-    
-}
+
 
 body{
     background: #6dc497; /* Old browsers */
-background: -moz-linear-gradient(45deg, #6dc497 0%, #55c8e7 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(45deg, #6dc497 0%,#55c8e7 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(45deg, #6dc497 0%,#55c8e7 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6dc497', endColorstr='#55c8e7',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    background: -moz-linear-gradient(45deg, #6dc497 0%, #55c8e7 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(45deg, #6dc497 0%,#55c8e7 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(45deg, #6dc497 0%,#55c8e7 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6dc497', endColorstr='#55c8e7',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
 
 footer{
     background-color: 	#fff;
-	/* background-image: "#"; */
-	width: 96%;
-	padding: 25px;
+    /* background-image: "#"; */
+    width: 96%;
+    padding: 25px;
     padding-top: 5%;
     margin-top: 10%;
     border-radius: 5px;
     border-radius: 5px;
     box-shadow: 0 0, 0 3px 20px rgba(0, 0, 0, .35);
+
+    /* If you want to use the footer, just remove this tag below */
+    visibility:  hidden;
 }
 
 #sidebar{
@@ -192,18 +195,21 @@ footer{
     display: inline-block;
     margin-left: 5%;
     margin-right: -5%;
+    margin-top: 2%;
     height: 356px;
     max-height: 356px;
-    
-    
+    float: left;
+
+
 }
 
 #sidebar nav{
     line-height: 3.0;
-    display: inline;
-    padding: 10%;
+    display: inline-block;
     color: #222;
-    
+    width: auto;
+    padding: 1em;
+
 }
 
 #content{
@@ -211,17 +217,26 @@ footer{
     margin-right: 0%;
     margin-left: 10%;
     margin-top: 2%;
-}
 
-#content H2{
-    margin-left: -15%;
-}
-
-
-pre{
     background-color: rgba(255, 255, 255, 0.6);
     border-radius: 5px;
     box-shadow: 0 0, 0 3px 20px rgba(0, 0, 0, .35);
-    
+
 }
 
+pre H2{
+    margin-left: -6%;
+}
+
+#login{
+    display: inline-block;
+    margin-right: auto;
+    margin-left: 10%;
+    margin-top: 2%;
+    width: 9em;
+    padding: 1.4em;
+    background-color:rgba(255, 255, 255, 0.6);
+    border-radius: 5px;
+    box-shadow: 0 0, 0 3px 20px rgba(0, 0, 0, .35);
+
+}
